// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard Should render previous step for edit 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="gcp-secret-manager"
        >
          <svg
            fill="currentColor"
            height="37"
            viewBox="0 0 32 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.95 29.324L.387 17.956a2.88 2.88 0 010-2.875L6.95 3.71a2.877 2.877 0 012.487-1.437h13.126c1.024 0 1.975.55 2.487 1.438l6.563 11.369a2.88 2.88 0 010 2.875L25.05 29.324a2.877 2.877 0 01-2.488 1.438H9.438a2.877 2.877 0 01-2.487-1.438z"
              fill="url(#gcp-secret-manager_svg__a)"
            />
            <path
              clip-rule="evenodd"
              d="M31.996 16.593c-.012.472-.14.941-.383 1.363L25.05 29.324a2.877 2.877 0 01-2.488 1.438H14.08l-8.062-8.306.135-3.208.442-7.361 3.473-1.177 15.922-.128 6.007 6.011z"
              fill="#3D7BE2"
              fill-rule="evenodd"
            />
            <path
              d="M26 10.575v11.887h-3.962a.189.189 0 01-.189-.19v-1.131c0-.104.084-.189.189-.189h2.452v-8.868H9.76a.189.189 0 01-.188-.188v-1.133c0-.104.085-.188.189-.188H26zm-15.69 0c.103 0 .188.084.188.188v1.133a.189.189 0 01-.189.188h-2.8v8.868h15.227a.19.19 0 01.189.189v1.132a.189.189 0 01-.189.189H6V10.575h4.31zm11.117 3.868v1.456l.06.024 1.351-.477.28.82-1.362.465-.037.098.937 1.26-.706.514-.912-1.26h-.085l-.913 1.26-.705-.514.924-1.26-.024-.098-1.362-.465.28-.82 1.338.477.073-.024v-1.456h.863zm-10.231 0v1.441l.06.025 1.351-.473.28.812-1.363.46-.036.097.937 1.248-.706.509-.912-1.248h-.085l-.913 1.248-.705-.509.924-1.248-.024-.097-1.362-.46.28-.812 1.337.473.073-.025v-1.441h.864zm5.094 0v1.441l.061.025 1.35-.473.28.812-1.362.46-.037.097.937 1.248-.706.509-.912-1.248h-.085l-.912 1.248-.706-.509.925-1.248-.025-.097-1.362-.46.28-.812 1.338.473.073-.025v-1.441h.863z"
              fill="#fff"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="gcp-secret-manager_svg__a"
                x1="16"
                x2="16"
                y1="2.277"
                y2="30.715"
              >
                <stop
                  stop-color="#4387FD"
                />
                <stop
                  offset="1"
                  stop-color="#4683EA"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.gcpSecretManager
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
          data-cy="connector-overview-heading"
        >
          overview
        </p>
        <div
          class="StyledProps--font StyledProps--main connectorForm"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="universalInputNameWithId"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                swarafdsfd
                              </span>
                            </div>
                          </span>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormGcpSecretManager_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="description-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="tags-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first and second step form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="gcp-secret-manager"
        >
          <svg
            fill="currentColor"
            height="37"
            viewBox="0 0 32 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.95 29.324L.387 17.956a2.88 2.88 0 010-2.875L6.95 3.71a2.877 2.877 0 012.487-1.437h13.126c1.024 0 1.975.55 2.487 1.438l6.563 11.369a2.88 2.88 0 010 2.875L25.05 29.324a2.877 2.877 0 01-2.488 1.438H9.438a2.877 2.877 0 01-2.487-1.438z"
              fill="url(#gcp-secret-manager_svg__a)"
            />
            <path
              clip-rule="evenodd"
              d="M31.996 16.593c-.012.472-.14.941-.383 1.363L25.05 29.324a2.877 2.877 0 01-2.488 1.438H14.08l-8.062-8.306.135-3.208.442-7.361 3.473-1.177 15.922-.128 6.007 6.011z"
              fill="#3D7BE2"
              fill-rule="evenodd"
            />
            <path
              d="M26 10.575v11.887h-3.962a.189.189 0 01-.189-.19v-1.131c0-.104.084-.189.189-.189h2.452v-8.868H9.76a.189.189 0 01-.188-.188v-1.133c0-.104.085-.188.189-.188H26zm-15.69 0c.103 0 .188.084.188.188v1.133a.189.189 0 01-.189.188h-2.8v8.868h15.227a.19.19 0 01.189.189v1.132a.189.189 0 01-.189.189H6V10.575h4.31zm11.117 3.868v1.456l.06.024 1.351-.477.28.82-1.362.465-.037.098.937 1.26-.706.514-.912-1.26h-.085l-.913 1.26-.705-.514.924-1.26-.024-.098-1.362-.465.28-.82 1.338.477.073-.024v-1.456h.863zm-10.231 0v1.441l.06.025 1.351-.473.28.812-1.363.46-.036.097.937 1.248-.706.509-.912-1.248h-.085l-.913 1.248-.705-.509.924-1.248-.024-.097-1.362-.46.28-.812 1.337.473.073-.025v-1.441h.864zm5.094 0v1.441l.061.025 1.35-.473.28.812-1.362.46-.037.097.937 1.248-.706.509-.912-1.248h-.085l-.912 1.248-.706-.509.925-1.248-.025-.097-1.362-.46.28-.812 1.338.473.073-.025v-1.441h.863z"
              fill="#fff"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="gcp-secret-manager_svg__a"
                x1="16"
                x2="16"
                y1="2.277"
                y2="30.715"
              >
                <stop
                  stop-color="#4387FD"
                />
                <stop
                  offset="1"
                  stop-color="#4683EA"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.gcpSecretManager
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
          data-cy="connector-overview-heading"
        >
          overview
        </p>
        <div
          class="StyledProps--font StyledProps--main connectorForm"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="universalInputNameWithId"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormGcpSecretManager_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="description-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="tags-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first and second step form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="gcp-secret-manager"
        >
          <svg
            fill="currentColor"
            height="37"
            viewBox="0 0 32 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.95 29.324L.387 17.956a2.88 2.88 0 010-2.875L6.95 3.71a2.877 2.877 0 012.487-1.437h13.126c1.024 0 1.975.55 2.487 1.438l6.563 11.369a2.88 2.88 0 010 2.875L25.05 29.324a2.877 2.877 0 01-2.488 1.438H9.438a2.877 2.877 0 01-2.487-1.438z"
              fill="url(#gcp-secret-manager_svg__a)"
            />
            <path
              clip-rule="evenodd"
              d="M31.996 16.593c-.012.472-.14.941-.383 1.363L25.05 29.324a2.877 2.877 0 01-2.488 1.438H14.08l-8.062-8.306.135-3.208.442-7.361 3.473-1.177 15.922-.128 6.007 6.011z"
              fill="#3D7BE2"
              fill-rule="evenodd"
            />
            <path
              d="M26 10.575v11.887h-3.962a.189.189 0 01-.189-.19v-1.131c0-.104.084-.189.189-.189h2.452v-8.868H9.76a.189.189 0 01-.188-.188v-1.133c0-.104.085-.188.189-.188H26zm-15.69 0c.103 0 .188.084.188.188v1.133a.189.189 0 01-.189.188h-2.8v8.868h15.227a.19.19 0 01.189.189v1.132a.189.189 0 01-.189.189H6V10.575h4.31zm11.117 3.868v1.456l.06.024 1.351-.477.28.82-1.362.465-.037.098.937 1.26-.706.514-.912-1.26h-.085l-.913 1.26-.705-.514.924-1.26-.024-.098-1.362-.465.28-.82 1.338.477.073-.024v-1.456h.863zm-10.231 0v1.441l.06.025 1.351-.473.28.812-1.363.46-.036.097.937 1.248-.706.509-.912-1.248h-.085l-.913 1.248-.705-.509.924-1.248-.024-.097-1.362-.46.28-.812 1.337.473.073-.025v-1.441h.864zm5.094 0v1.441l.061.025 1.35-.473.28.812-1.362.46-.037.097.937 1.248-.706.509-.912-1.248h-.085l-.912 1.248-.706-.509.925-1.248-.025-.097-1.362-.46.28-.812 1.338.473.073-.025v-1.441h.863z"
              fill="#fff"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="gcp-secret-manager_svg__a"
                x1="16"
                x2="16"
                y1="2.277"
                y2="30.715"
              >
                <stop
                  stop-color="#4387FD"
                />
                <stop
                  offset="1"
                  stop-color="#4683EA"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.gcpSecretManager
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
          data-cy="connector-overview-heading"
        >
          overview
        </p>
        <div
          class="StyledProps--font StyledProps--main connectorForm"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              action="#"
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="universalInputNameWithId"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy_name
                              </span>
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormGcpSecretManager_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="description-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="tags-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first and second step form 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="gcp-secret-manager"
        >
          <svg
            fill="currentColor"
            height="37"
            viewBox="0 0 32 33"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.95 29.324L.387 17.956a2.88 2.88 0 010-2.875L6.95 3.71a2.877 2.877 0 012.487-1.437h13.126c1.024 0 1.975.55 2.487 1.438l6.563 11.369a2.88 2.88 0 010 2.875L25.05 29.324a2.877 2.877 0 01-2.488 1.438H9.438a2.877 2.877 0 01-2.487-1.438z"
              fill="url(#gcp-secret-manager_svg__a)"
            />
            <path
              clip-rule="evenodd"
              d="M31.996 16.593c-.012.472-.14.941-.383 1.363L25.05 29.324a2.877 2.877 0 01-2.488 1.438H14.08l-8.062-8.306.135-3.208.442-7.361 3.473-1.177 15.922-.128 6.007 6.011z"
              fill="#3D7BE2"
              fill-rule="evenodd"
            />
            <path
              d="M26 10.575v11.887h-3.962a.189.189 0 01-.189-.19v-1.131c0-.104.084-.189.189-.189h2.452v-8.868H9.76a.189.189 0 01-.188-.188v-1.133c0-.104.085-.188.189-.188H26zm-15.69 0c.103 0 .188.084.188.188v1.133a.189.189 0 01-.189.188h-2.8v8.868h15.227a.19.19 0 01.189.189v1.132a.189.189 0 01-.189.189H6V10.575h4.31zm11.117 3.868v1.456l.06.024 1.351-.477.28.82-1.362.465-.037.098.937 1.26-.706.514-.912-1.26h-.085l-.913 1.26-.705-.514.924-1.26-.024-.098-1.362-.465.28-.82 1.338.477.073-.024v-1.456h.863zm-10.231 0v1.441l.06.025 1.351-.473.28.812-1.363.46-.036.097.937 1.248-.706.509-.912-1.248h-.085l-.913 1.248-.705-.509.924-1.248-.024-.097-1.362-.46.28-.812 1.337.473.073-.025v-1.441h.864zm5.094 0v1.441l.061.025 1.35-.473.28.812-1.362.46-.037.097.937 1.248-.706.509-.912-1.248h-.085l-.912 1.248-.706-.509.925-1.248-.025-.097-1.362-.46.28-.812 1.338.473.073-.025v-1.441h.863z"
              fill="#fff"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="gcp-secret-manager_svg__a"
                x1="16"
                x2="16"
                y1="2.277"
                y2="30.715"
              >
                <stop
                  stop-color="#4387FD"
                />
                <stop
                  offset="1"
                  stop-color="#4683EA"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.gcpSecretManager
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--padding-bottom-xlarge"
        >
          details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main gcpContainer"
              >
                <div
                  class="bp3-form-group ThumbnailSelect--mainContainer"
                  data-id="delegateType-0"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                    >
                      <label
                        class="Thumbnail--squareCardContainer Thumbnail--large"
                      >
                        <div
                          class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                          tabindex="0"
                        >
                          <p
                            class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                          >
                            connectors.GCP.delegateOutClusterInfo
                          </p>
                        </div>
                        <input
                          name="delegateType"
                          type="checkbox"
                          value="ManualConfig"
                        />
                      </label>
                      <label
                        class="Thumbnail--squareCardContainer Thumbnail--large"
                      >
                        <div
                          class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                          tabindex="0"
                        >
                          <p
                            class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                          >
                            connectors.GCP.delegateInClusterInfo
                          </p>
                        </div>
                        <input
                          name="delegateType"
                          type="checkbox"
                          value="InheritFromDelegate"
                        />
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  aria-label="back"
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  aria-label="continue"
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
